# fmag-cli

./: LICENSE  README.md  example_commands.md  pyproject.toml  requirements.txt
demo_outputs/: sample_output_commentary.md
src/fmag/: __init__.py  audio_utils.py  cli.py  core.py  presets.py
src/fmag/providers/: __init__.py  audiogen_provider.py  bark_provider.py  base.py
src/fmag_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_cli.py  test_core.py
