[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmag-cli"
version = "1.0.0"
description = "Focus Mode Ambience Generator - AI-powered ambient soundscapes for deep focus"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FMAG Contributors", email = "hello@fmag.dev"}
]
keywords = [
    "ambience",
    "focus",
    "audio",
    "generator",
    "ai",
    "productivity",
    "lofi",
    "soundscape",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
audiogen = ["openai>=1.0.0"]
bark = ["bark>=0.1.0"]
all = ["openai>=1.0.0", "bark>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
fmag = "fmag.cli:main"

[project.urls]
Homepage = "https://github.com/fmag-cli/fmag-cli"
Documentation = "https://github.com/fmag-cli/fmag-cli#readme"
Repository = "https://github.com/fmag-cli/fmag-cli"
Issues = "https://github.com/fmag-cli/fmag-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

